plugins {
	id 'org.springframework.boot' version '2.3.12.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.brill.server'
version = '0.0.1'

// The versions of Java currently supported are 11 to 15.
// We therefore need to maintain source compatibility with the lowest version. i.e. 11
sourceCompatibility = 11

// tasks.withType(JavaCompile) {
//     options.compilerArgs += '--enable-preview'
// }
// tasks.withType(Test) {
//     jvmArgs += "--enable-preview"
// }

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

// bootRun {
//     systemProperty "spring.profiles.active", "prod"
// }

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

    // Eclipse JGit Library - used to access Git repository in GitRepository.java
	compile 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
	compile 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:6.5.0.202303070854-r'

	
    // Bouncy Castle Crypto Library - used for Eliptical Curve operation in Crypto.java
    compile 'org.bouncycastle:bcpkix-jdk18on:1.72'

	// Mozilla Rhino library - used to run JavaScript in JavaScriptService.java
	compile 'org.mozilla:rhino:1.7.13'

	// Added for JUnit 5
	testCompile("org.junit.jupiter:junit-jupiter-api:5.3.1")
	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.1")
	testCompile("org.junit.platform:junit-platform-runner:1.3.1")
	testCompile ("org.mockito:mockito-core:2.22.0")
	testRuntime("org.mockito:mockito-junit-jupiter:2.22.0")
	testImplementation("org.mockito:mockito-core:2.22.0")
	testImplementation("org.mockito:mockito-junit-jupiter:2.22.0")
	testCompile("org.apache.logging.log4j:log4j-jul:2.11.1")

    // WebSockets
    compile("org.springframework:spring-websocket:5.2.8.RELEASE")
	compile("org.springframework:spring-messaging:5.2.8.RELEASE")

	compile("org.apache.logging.log4j:log4j-api:2.11.1")
	compile("org.apache.logging.log4j:log4j-core:2.11.1")

	compile("org.apache.logging.log4j:log4j-slf4j18-impl:2.11.1")
	compile("org.slf4j:slf4j-api:1.7.25")
	compile("org.slf4j:jul-to-slf4j:1.7.25")

	compile("commons-io:commons-io:2.6")
	compile("javax.json:javax.json-api:1.1.4")
	compile("org.glassfish:javax.json:1.1.4")
	compile("mysql:mysql-connector-java:8.0.19")
}

test {
	useJUnitPlatform()
}

task copyWebApp(type: Copy) {
	from '../brill_client/build'
  	into 'src/main/resources/static/.'
}
